--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,2 +1,436 @@
 @import "../scss/_normalize.scss"
 @import "../scss/_reset.scss"
+
+.header
+	display: flex
+	justify-content: space-between
+	align-items: center
+	padding: 30px 0px
+	margin: 0 120px
+	&__item
+		padding-right: 40px
+		text-decoration: none
+		color: #292F36	
+		font-family: "Jost", sans-serif
+		font-size: 20px
+		font-weight: 400
+		&:nth-child(2)
+			color: #CDA274
+		&:last-child
+			padding: 0
+
+.section-first
+	background: url("../img/IMAGE (1).png") no-repeat	
+	background-size: cover
+	background-position: center center
+	padding-top: 185px
+	padding-bottom: 260px
+	&__block 
+		width: 600px
+		height: 386px
+		margin-left: 120px
+		&__title 
+			font-family: "DM Serif Display", sans-serif
+			font-size: 80px
+			font-weight: 400
+			padding-bottom: 19px
+			color: #292F36
+		&__text 
+			font-family: 'Jost', sans-serif
+			font-size: 22px
+			line-height: 33px
+			padding-bottom: 35px
+			color: #4D5053
+		&__btn 
+			display: flex
+			justify-content: center
+			align-items: center
+			height: 71px
+			width: 207px
+			background: #292F36
+			border-radius: 18px
+			text-align: center
+			color: #fff
+			text-decoration: none
+			font-family: 'Jost', sans-serif
+			font-size: 18px
+			&::after
+				content: "\279C"
+				color: #CDA274
+				margin-left: 30px
+				font-size: 40px
+
+
+.section-second
+	&__services 
+		display: flex
+		justify-content: space-evenly
+		margin: 175px 0
+		text-align: center
+		// padding-bottom: 170px
+		&__item 
+			&__title
+				font-family: "DM Serif Display", sans-serif
+				font-size: 25px
+				padding-bottom: 17px
+				color: #292F36
+			&__text
+				font-family: "Jost", sans-serif
+				font-size: 22px
+				line-height: 33px
+				width: 317px
+				height: 132px
+				padding-bottom: 35px
+				letter-spacing: 0.22px
+				color: #4D5053
+			&__link
+				font-family: "Jost", sans-serif
+				font-size: 18px
+				text-decoration: none
+				color: #4D5053
+				&::after
+					content: "\279C"
+					margin-left: 6px
+					color: #CDA274
+
+.section-third 
+	display: flex
+	justify-content: space-evenly
+	padding-bottom: 140px
+	&__advice 
+		padding-top: 40px
+		width: 592px
+		&__title 
+			font-family: "DM Serif Display", sans-serif
+			font-size: 50px
+			line-height: 65px
+			letter-spacing: 0.22px
+			padding-bottom: 42px
+			color: #292F36
+		&__text 
+			font-family: "Jost", sans-serif
+			font-size: 22px
+			line-height: 33px
+			color: #4D5053
+			padding-bottom: 40px
+		&__btn				
+			display: flex
+			justify-content: center
+			align-items: center
+			height: 71px
+			width: 263px
+			background: #292F36
+			border-radius: 18px
+			color: #fff
+			text-decoration: none
+			font-family: 'Jost', sans-serif
+			font-size: 18px
+			&::after
+				content: "\279C"
+				color: #CDA274
+				margin-left: 30px
+				font-size: 40px
+		&__contact
+			display: flex
+			align-items: center
+			&__call
+				display: flex
+				justify-content: center
+				align-items: center
+				width: 93px
+				height: 93px
+				background-color: #F4F0EC
+				border-radius: 100px
+				margin-right: 20px
+			&__tel
+				&__number
+					font-family: "Jost", sans-serif
+					font-size: 24px	
+					color: #4D5053
+				&__text
+					font-family: "Jost", sans-serif
+					font-size: 22px	
+					color: #4D5053
+
+.section-fourth
+	background-color: #F4F0EC
+	width: 1200px
+	
+	margin: 0 auto 
+	border-radius: 70px
+	text-align: center
+	padding-top: 103px
+	padding-bottom: 121px
+	&__title 
+		font-size: 45px
+		font-family: "DM Serif Display", sans-serif
+		width: 479px
+		margin: 0 auto
+		padding-bottom: 45px
+	&__about 
+		display: flex
+		justify-content: space-evenly
+		&__item
+			background-color: #fff 
+			width: 354px
+			border-radius: 30px
+			text-align: center
+			padding-top: 49px
+			&__person 
+				display: flex
+				justify-content: center
+				align-items: center
+				margin-bottom: 25px
+				&__photo 
+					margin-right: 20px
+				&__data 
+	
+				&__name
+					font-family: "DM Serif Display", sans-serif
+					font-size: 25px
+					line-height: 38px
+					color: #292F36
+					letter-spacing: 0.22px
+				&__country 
+					font-family: "Jost", sans-serif
+					font-size: 18px	
+					text-transform: uppercase
+					color: #4D5053
+				&__text 
+					font-family: "Jost", sans-serif
+					font-size: 20px
+					font-weight: 400
+					color: #4D5053
+					width: 244px	
+					margin: 0 auto
+					padding-bottom: 45px	
+	
+.section-fifth
+	margin: 140px auto 0
+	&__brands
+		display: flex
+		justify-content: space-evenly
+		align-items: center
+
+.section-sixth
+	margin-top: 113px
+	text-align: center
+	&__title
+		font-family: "DM Serif Display", sans-serif
+		font-size: 47px		
+		color: #292F36
+	&__text
+		font-family: "Jost", sans-serif
+		font-size: 22px
+		line-height: 33px
+		width: 786px
+		margin: 20px auto
+		color: #4D5053
+		padding-bottom: 70px
+	&__choices
+		display: flex
+		flex-wrap: wrap
+		justify-content: space-evenly
+		&__choice
+			padding-bottom: 60px
+			&__wrapper
+				display: flex
+				justify-content: space-between
+				margin-top: 24px
+				&__title
+					font-family: "DM Serif Display", sans-serif
+					font-size: 24px
+					color: #292F36
+					height: 38px
+				&__text
+					font-family: "Jost", sans-serif
+					font-size: 22px
+					color: #4D5053
+					height: 33px
+					text-align: start
+
+				&__btn
+					display: flex
+					align-items: center
+					justify-content: center
+					width: 70px
+					height: 70px
+					background: #F4F0EC
+					border-radius: 100px
+					text-decoration: none
+					color: #292F36
+				
+.section-seventh
+	margin-top: 80px
+	padding-top: 140px
+	background-color: #F4F0EC
+	padding: 140px 120px 0
+	display: flex
+	justify-content: center
+	padding-bottom: 140px
+	&__block
+		width: 288px
+		height: 195px
+		text-align: center
+		border-right: 1px solid #CDA274
+		&:last-child
+			border-right: none
+		&__title
+			font-family: "DM Serif Display", sans-serif
+			color: #CDA274
+			font-size: 85px
+			margin-top: 40px
+		&__text
+			font-family: "Jost", sans-serif
+			font-size: 22px
+			color: #4D5053
+			line-height: 33px
+
+.section-eighth
+	margin-top: 143px
+	text-align: center
+	&__title
+		font-family: "DM Serif Display", sans-serif
+		font-size: 48px
+		color: #292F36
+		padding-bottom: 21px
+	&__text	
+		font-family: "Jost", sans-serif
+		font-size: 22px
+		color: #4D5053
+		width: 589px
+		margin: 0 auto
+		padding-bottom: 70px
+	&__blogs
+		display: flex
+		flex-wrap: wrap
+		justify-content: center
+		&__item
+			width: 387px
+			border: 1px solid #E7E7E7
+			border-radius: 62px
+			padding-top: 21px
+			padding-bottom: 40px
+			margin-right: 20px
+			margin-bottom: 40px
+			&__title
+				margin-top: 15px
+				font-family: "DM Serif Display", sans-serif
+				color: #292F36
+				font-size: 25px
+				text-align: start
+				padding-left: 21px
+				padding-bottom: 20px
+			&__date
+				font-family: "Jost", sans-serif
+				font-size: 16px
+				color: #4D5053
+				padding-left: 21px
+			&__wrapper
+				display: flex 	
+				align-items: center
+				justify-content: space-between
+
+			&__btn
+				display: flex
+				align-items: center
+				justify-content: center
+				width: 70px
+				height: 70px
+				background: #F4F0EC
+				border-radius: 100px
+				text-decoration: none
+				color: #292F36	
+				margin-right: 21px
+
+.section-ninth
+	width: 1200px
+	background-color: #292F36
+	border-radius: 70px		
+	text-align: center
+	padding: 100px 0
+	margin: 100px auto
+
+	color: #fff
+	&__title
+		font-family: "DM Serif Display", sans-serif
+		font-size: 50px	
+		line-height: 75px
+		padding-bottom: 9px
+	&__text
+		font-family: "Jost", sans-serif
+		font-size: 22px	
+		line-height: 33px
+		padding-bottom: 31px
+	&__btn
+		background: #CDA274
+		border: 2px solid #CDA274
+		box-shadow: 1px 0px 18px rgba(0, 0, 0, 0.2)
+		border-radius: 18px
+		text-decoration: none
+		color: #fff
+		width: 241px
+		height: 71px
+		display: flex
+		align-items: center
+		justify-content: center
+		margin: 0 auto
+		&::after
+			content: '\279C'
+			margin-left: 27px
+			font-size: 30px
+
+.section-tenth
+	display: flex
+	justify-content: center
+	padding-bottom: 100px
+	&__block
+		margin-right: 16px
+		&:first-child
+			padding-right: 67px
+		&:nth-child(2)
+			width: 210px
+		&:nth-child(3)
+			width: 210px	
+		&__link
+			display: block
+			font-family: "Jost", sans-serif
+			font-size: 22px	
+			line-height: 33px
+			color: #4D5053
+			padding-bottom: 30px
+			text-decoration: none
+		.address
+			width: 321px	
+
+		&__text
+			font-family: "Jost", sans-serif
+			font-size: 22px	
+			line-height: 33px
+			width: 326px
+			padding-top: 15px
+			padding-bottom: 30px
+			color: #4d5053
+		&__wrapper
+			display: flex
+			&__link
+				padding-right: 40px
+				color: #292F36
+		&__title
+			font-family: "DM Serif Display", sans-serif
+			font-size: 25px	
+			line-height: 37.5px
+			color: #292F36
+			padding-bottom: 21px
+
+.footer
+	text-align: center
+	margin-top: 35px
+	padding-bottom: 35px
+	&__text
+		font-family: "Jost", sans-serif
+		font-size: 22px	
+		line-height: 33px
+		color: #4D5053
+	span
+		color: #cda274
